<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app_front_heading">My Applications!</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="build">Build It Bigger</string>
    <string name="capstone">Capstone : My own App</string>
</resources>
