<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:text="@string/app_front_heading"
        android:id="@+id/apps"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/heading_size" 
        style="@style/applicationStyle" />

    <Button
        android:text="@string/spotify"
        android:id="@+id/spotify"
        android:layout_below="@+id/apps" 
        style="@style/applicationStyle" />

    <Button
        android:text="@string/scores"
        android:id="@+id/scores"
        android:layout_below="@+id/spotify" 
        style="@style/applicationStyle" />

    <Button
        android:text="@string/library"
        android:id="@+id/library"
        android:layout_below="@+id/scores" 
        style="@style/applicationStyle" />

    <Button
        android:text="@string/build"
        android:id="@+id/build"
        android:layout_below="@+id/library" 
        style="@style/applicationStyle" />

    <Button
        android:text="XYZ Reader"
        android:id="@+id/xyz"
        android:layout_below="@+id/build" 
        style="@style/applicationStyle" />

    <Button
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:layout_below="@+id/xyz" 
        style="@style/applicationStyle" />

</RelativeLayout>
